fix spacing for home page

--- a/ds-ux-guidelines/src/ds-components/layout/layout-development.scss
+++ b/ds-ux-guidelines/src/ds-components/layout/layout-development.scss
@@ -44,7 +44,7 @@
 
   article {
     flex: 8;
-    overflow-y: scroll;
+    overflow-y: auto;
     /* height set on child; triggers scroll */
   }
 }
